# ehio

./: .gitignore  CHANGELOG.md  README.md  cli.py  pyproject.toml  setup.py  utils.py
ehio/: cli.py  utils.py
ehio/workflow/rules/: create_PRB_folder.smk  download_raw.smk  drakkar_preprocess.smk  get_host_genome.smk  prb_summary.smk  upload_prb.smk
profile/local/: config.yaml
profile/slurm/: config.yaml
scripts/: release.py
src/ehio/: __init__.py  __main__.py  airtable.py  cli.py  config.py  drakkar.py  metadata.py  scanning.py  transfer.py
src/ehio/data/: config.yaml
tests/: conftest.py  test_airtable.py  test_drakkar.py  test_metadata.py  test_scanning.py
workflow/: assembly_binning.smk  dereplication_mapping.smk  preprocessing.smk
workflow/rules/: create_PRB_folder.smk  drakkar_preprocess.smk  get_filesize_erda.smk  get_host_genome.smk  prb_summary.smk  upload_prb.smk
workflow/rules/asb/: create_ASB_folder.smk  download_preprocessed.smk  drakkar_cataloging.smk  log_ASB_finish.smk
workflow/rules/dmb/: create_DMB_folder.smk  download_mags.smk  download_preprocessed.smk  drakkar_profiling.smk  log_DMB_finish.smk
workflow/rules/prb/: download_raw.smk  get_filesize_erda.smk  update_airtable.smk  upload_prb.smk
